services/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: default-backend
  namespace: default
  labels:
    app.kubernetes.io/name: default-backend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: default-backend
---
apiVersion: v1
kind: Service
metadata:
  name: v0-api-dps
  namespace: default
  labels:
    app.kubernetes.io/name: v0-api-dps
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: v0-api-dps
---
apiVersion: v1
kind: Service
metadata:
  name: v1-api-apply
  labels:
    app.kubernetes.io/name: v1-api-apply
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: v1-api-apply
---
apiVersion: v1
kind: Service
metadata:
  name: v1-api-contact
  labels:
    app.kubernetes.io/name: v1-api-contact
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: v1-api-contact
