services/v1-api-dps.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: v1-api-dps
  namespace: default
  labels:
    app.kubernetes.io/name: v1-api-dps
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: v1-api-dps
  template:
    metadata:
      labels:
        app.kubernetes.io/name: v1-api-dps
    spec:
      containers:
      - name: gw2-dps-report
        image: progamesigner/gw2-dps-report:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
        resources:
---
apiVersion: v1
kind: Service
metadata:
  name: v1-api-dps
  labels:
    app.kubernetes.io/name: v1-api-dps
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: v1-api-dps
